# RAG4ArkUI

./: .aiderrules  .clinerules  .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  CONVENTIONS.md  Makefile  ONBOARDING.md  README.md  RULES_FOR_AGENTS.md  rust-toolchain.toml
.claude/: settings.json
.claude/references/: AGENTS.md  arkuix-refactor-checklist.md  benchmark-report-template.md  example-mapping.md  mapping-animation.md  mapping-layout.md  mapping-state.md
.claude/skills/: AGENTS.md  SKILL_SCHEMA.md  arkuix-refactor.md  example-skill.md  generate.md  kmp-to-arkuix.md  migrate-to-benchmark.md  run-benchmark.md
.github/workflows/: book.yml  ci.yml  corpus-build.yml  release.yml
corpus/: README.md
corpus/_eval/: queries.yaml  smoke-queries.yaml
corpus/official/: arkuix-best-practices.md
corpus/official/mapping/: mapping-async.md  mapping-benchmark.md  mapping-list.md
crates/: Cargo.toml  README.md
crates/arkui-rag-chunker/: Cargo.toml  README.md
crates/arkui-rag-chunker/src/: dispatcher.rs  kotlin.rs  lib.rs  markdown.rs  swift.rs  treesitter_base.rs  typescript.rs
crates/arkui-rag-cli/: Cargo.toml  README.md
crates/arkui-rag-cli/src/: main.rs
crates/arkui-rag-core/: Cargo.toml  README.md
crates/arkui-rag-core/src/: chunk.rs  chunker.rs  embedder.rs  error.rs  hit.rs  lib.rs  query.rs  query_enhancer.rs  reranker.rs  retriever.rs
crates/arkui-rag-embedding/: Cargo.toml  README.md
crates/arkui-rag-embedding/src/: lib.rs  mock.rs  onnx.rs  onnx_embedder.rs  onnx_reranker.rs  reranker_onnx.rs
crates/arkui-rag-eval/: Cargo.toml  README.md
crates/arkui-rag-eval/src/: evaluator.rs  lib.rs  report.rs  types.rs
crates/arkui-rag-eval/tests/: eval_end_to_end.rs
crates/arkui-rag-indexer/: Cargo.toml  README.md
crates/arkui-rag-indexer/src/: lib.rs
crates/arkui-rag-indexer/tests/: end_to_end.rs
crates/arkui-rag-retrieval/: Cargo.toml  README.md
crates/arkui-rag-retrieval/src/: context.rs  hybrid.rs  hyde.rs  lib.rs  rerank.rs  rrf.rs
crates/arkui-rag-server/: Cargo.toml  README.md
crates/arkui-rag-server/src/: http.rs  lib.rs  lsp.rs  mcp.rs
crates/arkui-rag-server/tests/: http_e2e.rs
crates/arkui-rag-storage/: Cargo.toml  README.md
crates/arkui-rag-storage/src/: lancedb_store.rs  lib.rs  memory.rs  tantivy_bm25.rs
docs/: ADR-001-language-choice.md  ADR-002-crate-structure.md  ADR-003-corpus-layout.md  GLOSSARY.md  MCP-INTEGRATION-CLAUDE-CODE.md  RAG4ArkUI-完整技术方案.md  RELEASE-CORPUS.md  RELEASE-NOTES-v1.0.0.md  RELEASE.md  ROADMAP.md  STATUS-arkui-x-real-corpus.md  STATUS-bootstrap-status-rule.md  STATUS-ci-lint-cleanup.md  STATUS-cli-default-features.md  STATUS-concepts-archive-rule.md  STATUS-concepts-kb.md  STATUS-coreml-disable-env.md  STATUS-corpus-build-ci.md  STATUS-corpus-distribution-poc.md  STATUS-corpus-pull.md  STATUS-corpus-workflow-concept.md  STATUS-day10-tree-sitter.md  STATUS-day11-parent-child.md  STATUS-day14-http.md  STATUS-day15-mcp.md  STATUS-day16-lsp.md  STATUS-day19-claude-code.md  STATUS-day2.md  STATUS-day20a-release-local.md  STATUS-day20b-ci-matrix.md  STATUS-day4-bm25-tantivy.md  STATUS-day5-reranker.md  STATUS-day6-eval.md  STATUS-day7-hyde.md  STATUS-day9-lancedb.md  STATUS-github-pages-concept.md  STATUS-github-url-fix.md  STATUS-glossary.md  STATUS-index-pull-command.md  STATUS-install-script.md  (+22 more)
docs/concepts/: README.md  corpus-workflow.md  github-pages-deploy.md  mdbook.md  mvp.md  onnx-chain.md  tree-sitter.md
feedback/: AGENTS.md  DESIGN.md  refactor-rules.md
feedback/features/rag4arkui-core/: 1-2026-05-27-day1-skeleton.md  10-2026-05-27-day6-eval.md  11-2026-05-27-roadmap-doc.md  12-2026-05-27-day7-hyde.md  13-2026-05-27-day10-tree-sitter.md  14-2026-05-28-day9-lancedb.md  15-2026-05-28-day11-parent-child.md  16-2026-05-28-day14-http.md  17-2026-05-28-day15-mcp.md  18-2026-05-28-day19-claude-code.md  19-2026-05-28-day16-lsp.md  2-2026-05-27-day2-mock-demo.md  20-2026-05-28-day20a-release-local.md  21-2026-05-28-day20b-ci-matrix.md  22-2026-05-28-pre-existing-fixes.md  23-2026-05-29-corpus-pull.md  24-2026-05-29-mdbook-doc.md  25-2026-05-29-model-pull.md  27-2026-05-29-glossary.md  (+40 more)
feedback/meta/: 1-2026-05-26-template-initialization.md  10-2026-05-29-corpus-pull-deps.md  11-2026-05-29-mdbook-deploy-workflow.md  12-2026-05-29-lancedb-major-bump.md  13-2026-05-29-github-url-fix.md  14-2026-05-29-tracing-stderr-walk-fix.md  15-2026-05-29-readme-trim.md  16-2026-05-29-concepts-dir.md  17-2026-05-30-concepts-archive-rule.md  18-2026-05-30-install-binary-script.md  19-2026-05-30-opencode-mcp.md  2-2026-05-27-rag4arkui-bootstrap.md  20-2026-05-30-uninstall-script.md  21-2026-06-01-node24-force-flag.md  22-2026-06-01-macos13-deprecate.md  23-2026-06-01-release-cross-compile.md  24-2026-06-01-v1-release-coreml.md  25-2026-06-01-collect-corpus-script.md  26-2026-06-02-corpus-build-ci.md  27-2026-06-02-openharmony-partial-clone.md  28-2026-06-03-rag-smoke-script.md  29-2026-06-03-check-corpus-utf8.md  3-2026-05-27-demo-smoke-script.md  4-2026-05-27-ci-github-actions.md  5-2026-05-27-status-per-round-rule.md  6-2026-05-28-mcp-demo-script.md  7-2026-05-28-release-local-script.md  8-2026-05-28-release-ci-matrix.md  9-2026-05-28-chrono-pin-typescript-fix.md
mdbook/: book.toml
mdbook/src/: SUMMARY.md  architecture.md  intro.md  quickstart.md  roadmap.md  status.md  verify.md
reports/: AGENTS.md  rag-smoke-quick-start.md  rag-smoke-v2-no-threshold.md  rag-smoke-v2-summary.md  rag-smoke-v2-threshold-0.7.md
scripts/: AGENTS.md  audit-overrides.sh  check-api-parity.sh  check-archive-deletion.sh  check-consistency.sh  check-corpus-utf8.sh  check-no-verify.sh  classify-change.sh  collect-corpus.sh  commit.sh  demo-smoke.sh  init-project.sh  install-binary.sh  install-hooks.sh  log-tokens.sh  mcp-demo.sh  new-feature-log.sh  new-feature.sh  new-feedback.sh  parse-skill-meta.sh  preflight.sh  prepare-commit-msg-hook.sh  query-pending.sh  rag-smoke.sh  regenerate-skill-table.sh  release-corpus.sh  release-local.sh  stats-report.sh  uninstall-binary.sh
stats/: AGENTS.md  tokens.jsonl
(+23 files in other folders)
