[package]
name = "arkui-rag-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "arkui-rag binary entry — CLI + Serve + Index + Query"

[[bin]]
name = "arkui-rag"
path = "src/main.rs"

[dependencies]
arkui-rag-core = { workspace = true }
arkui-rag-server = { workspace = true }
arkui-rag-retrieval = { workspace = true }
arkui-rag-chunker = { workspace = true }
arkui-rag-embedding = { workspace = true }
arkui-rag-storage = { workspace = true }
arkui-rag-indexer = { workspace = true }
arkui-rag-eval = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
# 启用后 index/query 可选 --embedder onnx --model-path ...，转发 arkui-rag-embedding/onnx
onnx = ["arkui-rag-embedding/onnx"]
# 启用后 index/query 可选 --bm25 tantivy，转发 arkui-rag-storage/tantivy
tantivy = ["arkui-rag-storage/tantivy"]
# Day 10：启用后 indexer 自动识别 .ets / .ts / .tsx 并切分
typescript = ["arkui-rag-chunker/typescript"]
kotlin = ["arkui-rag-chunker/kotlin"]
swift = ["arkui-rag-chunker/swift"]
# Day 9：启用后 --vector lancedb 可选，转发 arkui-rag-storage/lancedb
lancedb = ["arkui-rag-storage/lancedb"]
# Day 14：启用后 serve --http 真启动 axum
http = ["arkui-rag-server/http"]
# Day 15：启用后 serve --mcp 真启动 stdio JSON-RPC
mcp = ["arkui-rag-server/mcp"]
# Day 16：启用后 serve --lsp 真启动 LSP stdio (Content-Length framing)
lsp = ["arkui-rag-server/lsp"]
# 一键开全（向量 + BM25 + 全语言 + LanceDB + HTTP + MCP + LSP）
full = ["onnx", "tantivy", "typescript", "kotlin", "swift", "lancedb", "http", "mcp", "lsp"]
