[package]
name = "arkui-rag-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "arkui-rag binary entry — CLI + Serve + Index + Query"

[[bin]]
name = "arkui-rag"
path = "src/main.rs"

[dependencies]
arkui-rag-core = { workspace = true }
arkui-rag-server = { workspace = true }
arkui-rag-retrieval = { workspace = true }
arkui-rag-chunker = { workspace = true }
arkui-rag-embedding = { workspace = true }
arkui-rag-storage = { workspace = true }
arkui-rag-indexer = { workspace = true }
arkui-rag-eval = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Day 21 corpus pull：HTTP 下载 + tar.gz 解压（feature gated · 体积可控）
ureq = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
tar = { workspace = true, optional = true }

[features]
# 默认开「能用」组合：三协议 + Tantivy BM25 + TypeScript/ArkTS 切分 + corpus 工具。
# 与 scripts/release-local.sh DEFAULT_FEATURES 一致 · 用户裸跑 `cargo build --release`
# 也能得到一个真正能接 Claude Code / 跑 mcp-demo 的 binary。
# 显式排除：
#   - onnx     · ort 2.0 RC 整链路 broken（task #87）· opt-in 等迁移完
#   - lancedb  · arrow/lance 编译 10+ 分钟 · 用户显式 `--features lancedb` 才拉
#   - kotlin/swift · 小众语言 chunker · 按需开
default = ["http", "mcp", "lsp", "tantivy", "typescript", "corpus-pull"]
# 启用后 index/query 可选 --embedder onnx --model-path ...，转发 arkui-rag-embedding/onnx
onnx = ["arkui-rag-embedding/onnx"]
# 启用后 index/query 可选 --bm25 tantivy，转发 arkui-rag-storage/tantivy
tantivy = ["arkui-rag-storage/tantivy"]
# Day 10：启用后 indexer 自动识别 .ets / .ts / .tsx 并切分
typescript = ["arkui-rag-chunker/typescript"]
kotlin = ["arkui-rag-chunker/kotlin"]
swift = ["arkui-rag-chunker/swift"]
# Day 9：启用后 --vector lancedb 可选，转发 arkui-rag-storage/lancedb
lancedb = ["arkui-rag-storage/lancedb"]
# Day 14：启用后 serve --http 真启动 axum
http = ["arkui-rag-server/http"]
# Day 15：启用后 serve --mcp 真启动 stdio JSON-RPC
mcp = ["arkui-rag-server/mcp"]
# Day 16：启用后 serve --lsp 真启动 LSP stdio (Content-Length framing)
lsp = ["arkui-rag-server/lsp"]
# Day 21：启用后 corpus pull 真活（HTTP 下载 + tar.gz 解压）
corpus-pull = ["dep:ureq", "dep:flate2", "dep:tar"]
# 一键开全（向量 + BM25 + 全语言 + LanceDB + HTTP + MCP + LSP + corpus-pull）
full = ["onnx", "tantivy", "typescript", "kotlin", "swift", "lancedb", "http", "mcp", "lsp", "corpus-pull"]
