[package]
name = "arkui-rag-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Indexing pipeline: walk files → dispatch chunker → batch embed → write storage"

[dependencies]
arkui-rag-core = { workspace = true }
arkui-rag-chunker = { workspace = true }
arkui-rag-embedding = { workspace = true }
arkui-rag-storage = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
arkui-rag-retrieval = { workspace = true }
