[package]
name = "arkui-rag-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Protocol adapters: HTTP / MCP / LSP. Wraps the RAG engine."

[dependencies]
arkui-rag-core = { workspace = true }
arkui-rag-retrieval = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tower = { workspace = true }
tempfile = "3.13"
arkui-rag-embedding = { workspace = true }
arkui-rag-storage = { workspace = true }
arkui-rag-chunker = { workspace = true }
arkui-rag-indexer = { workspace = true }
arkui-rag-retrieval = { workspace = true }

[features]
default = []
# Week 4 起：启用三套协议
http = ["dep:axum", "dep:tower"]
mcp = []
lsp = []
