[package]
name = "arkui-rag-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Storage backends: LanceDB (vector) + Tantivy (BM25) + SQLite (metadata)"

[dependencies]
arkui-rag-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tantivy = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
# Week 2 起：启用 LanceDB / Tantivy 真实集成
lancedb = []
# Day 4：启用 Tantivy（真实 BM25 倒排检索）
tantivy = ["dep:tantivy"]
