[package]
name = "arkui-rag-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Storage backends: LanceDB (vector) + Tantivy (BM25) + SQLite (metadata)"

[dependencies]
arkui-rag-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tantivy = { workspace = true, optional = true }
lancedb = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
# Day 4：启用 Tantivy（真实 BM25 倒排检索）
tantivy = ["dep:tantivy"]
# Day 9：启用 LanceDB（嵌入式向量库，解锁 chunks > 10k）· task #81 升 lancedb 0.30 后 chrono 不再需要 pin
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures"]
